--- a/Lapify/template/layout.html
+++ b/Lapify/template/layout.html
@@ -16,8 +16,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link active"  href="#">AddLaptop</a>
+        <a class="nav-link" href="#">ShowLaptop</a>
         <a class="nav-link" href="#">Pricing</a>
         <a class="nav-link disabled" aria-disabled="true">Disabled</a>
       </div>
