--- a/Lapify/template/laptop_app/add_laptop.html
+++ b/Lapify/template/laptop_app/add_laptop.html
@@ -1,17 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+{% load crispy_forms_tags %}
 
-<h1>Add Page</h1>
-<form method="post">
+
+
+{% block title %}
+    <title>Title</title>
+    {% endblock%}
+
+{% block content %}
+<form method="post" style="width:80%; margin-left:10%">
+    <h3 class="text-center">Add New Stock</h3>
     {% csrf_token %}
-    {{form}}
-    <button type="submit">Add</button>
+    {{form|crispy}}
+    <button class="btn btn-primary" type="submit">Add</button>
+    <button class="btn btn-secondary" type="submit">Reset</button>
 </form>
 
-</body>
-</html>
+{% endblock%}
