--- a/Lapify/template/layout.html
+++ b/Lapify/template/layout.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,14 +16,20 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active"  href="#">AddLaptop</a>
-        <a class="nav-link" href="#">ShowLaptop</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        <a class="nav-link active"  href="{% url 'add' %}">AddLaptop</a>
+        <a class="nav-link" href="{% url 'show' %}">ShowLaptop</a>
+
+          {% if user.is_authenticated %}
+           <a class="nav-link disabled">Logout</a>
+          {% else %}
+           <a class="nav-link" href="#">Signup</a>
+           <a class="nav-link disabled">Login</a>
+          {% endif%}
       </div>
     </div>
   </div>
 </nav>
+<br><br>
 
 
 {% block content %}
