add image functinality

--- a/Lapify/template/laptop_app/add_laptop.html
+++ b/Lapify/template/laptop_app/add_laptop.html
@@ -24,7 +24,7 @@
 
         <!-- Card Body -->
         <div class="card-body p-4">
-          <form method="post">
+          <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
 
             <!-- Form Fields -->
