--- a/Lapify/template/laptop_app/show_laptop.html
+++ b/Lapify/template/laptop_app/show_laptop.html
@@ -29,6 +29,7 @@
               <thead class="table-dark">
                 <tr>
                   <th>ID</th>
+                  <th>Image</th>
                   <th>Company</th>
                   <th>RAM</th>
                   <th>Storage</th>
@@ -42,6 +43,16 @@
                 {% for lap in laptop %}
                 <tr>
                   <td>{{ lap.id }}</td>
+                  <td>
+                    {% if lap.image %}
+                    <img src="{{ lap.image.url }}" alt="{{ lap.name }}" style="max-width: 300px;">
+                     {% else %}
+                     <p>No image uploaded.</p>
+                      {% endif %}
+
+                  </td>
+
+
                   <td class="fw-semibold">{{ lap.company }}</td>
                   <td>{{ lap.ram }} GB</td>
                   <td>{{ lap.storage }} GB</td>
