--- a/Lapify/template/auth_app/login.html
+++ b/Lapify/template/auth_app/login.html
@@ -81,6 +81,7 @@
           📝 New Registration
         </a>
       </p>
+      <p><a href="{% url 'reset_password' %}">Forgot your password?</a></p>
     </form>
 
   </div>
