--- a/Lapify/template/layout.html
+++ b/Lapify/template/layout.html
@@ -128,7 +128,7 @@
 
 <br><br>
 {% if messages %}
-  <div class="container mt-3 ">
+  <div class="container mt-3" style="width:50%;"  >
 
 
     {% if messages %}
