Add picture section of store in the home page

--- a/Lapify/template/laptop_app/career.html
+++ b/Lapify/template/laptop_app/career.html
@@ -30,7 +30,7 @@
     <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1000">
       <div class="card h-100 shadow-sm border-primary hover-light">
         <div class="card-body">
-          <h5 class="card-title text-primary">Software Developer</h5>
+          <h5 class="card-title text-primary">Store Manager</h5>
           <p class="card-text">Full-time – Bengaluru</p>
         </div>
       </div>
@@ -38,7 +38,7 @@
     <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1200">
       <div class="card h-100 shadow-sm border-success hover-light">
         <div class="card-body">
-          <h5 class="card-title text-success">Product Manager</h5>
+          <h5 class="card-title text-success">Staff Assistant</h5>
           <p class="card-text">Full-time – Remote</p>
         </div>
       </div>
@@ -46,7 +46,7 @@
     <div class="col-md-4" data-aos="zoom-in" data-aos-duration="1400">
       <div class="card h-100 shadow-sm border-warning hover-light">
         <div class="card-body">
-          <h5 class="card-title text-warning">UX/UI Designer</h5>
+          <h5 class="card-title text-warning">Relation Manager</h5>
           <p class="card-text">Contract – Bengaluru</p>
         </div>
       </div>
